--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+  <title>Hypixel5zig - The 5zig Mod plugin for the Hypixel Network
 <meta http-equiv="refresh" content="5;URL=https://github.com/SuikaWars/Hypixel5zig">
 <body>
 This site is currently under construction.
