--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <meta http-equiv="refresh" content="5;URL=https://github.com/SuikaWars/Hypixel5zig">
-<title>Hypixel5zig - The 5zig Mod plugin for the Hypixel Network
+  <title>Hypixel5zig - The 5zig Mod plugin for the Hypixel Network</title>
 <body>
 This site is currently under construction.
 <br>You will be redirected to Hypixel5zig GitHub page in 5 seconds
